# VideoPlayer

./: .gitmodules  CMakeLists.txt  README.md  about.md  mod.json
.github/workflows/: build.yml
include/: VideoPlayer.hpp
src/: VideoPlayer.cpp
